@@ -21,7 +21,7 @@ package org.apache.accumulo.test.functional;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.File;
-import java.net.URL;
+import java.net.URI;
 import java.security.KeyManagementException;
 import java.security.NoSuchAlgorithmException;
 import java.security.cert.X509Certificate;
@@ -142,7 +142,7 @@ public class MonitorSslIT extends ConfigurableMacBase {
         }
       }
     }
-    URL url = new URL(monitorLocation);
+    var url = new URI(monitorLocation).toURL();
     log.debug("Fetching web page {}", url);
     String result = FunctionalTestUtils.readWebPage(url).body();
     assertTrue(result.length() > 100);
